[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "haven"
version = "2.0.4"
authors = [{name = "dantezhu", email = "zny2008@gmail.com"}]
license = {text = "MIT"}
description = "flask's style binary server framework"
urls = {Homepage = "https://github.com/dantezhu/haven"}
requires-python = ">=3"
dependencies = [
    "events",
    "netkit",
    "setproctitle",
    "gevent",
    "gevent-websocket",
]

[tool.setuptools]
zip-safe = false
platforms = ["any"]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["ez_setup"] # examples; tests
namespaces = false
